Finished 1st day

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,30 @@
 
 <script>
 
+ // function removeTransition(e) { // if change this to ES6 function this will not work - how to fix it? - you can use srcElement property in event
+    const removeTransition = (e) => {
+    if(e.propertyName != 'transform') return ;
+    const key = e.srcElement;
+    key.classList.remove('playing'); 
+  }
+
+  const playSound = (e) => {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"`);
+    if(!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  }
+
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach( (key) => {
+    key.addEventListener('transitionend', removeTransition);
+  })
+
+  window.addEventListener('keydown', playSound);
+  
 </script>
 
 
